<resources>
    <string name="app_name">SJCE MAP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SJCE MAP</string>
    <string name="nav_header_subtitle">Direction assistant app for SJCE-Mysore campus locations</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">HOME</string>
    <string name="search">Search</string>
    <string name="menu_about">ABOUT</string>
    <string name="no_barcode_detected">No qrcode detected</string>
    <string name="all_departments">All Departments</string>
    <string name="current_location">{current_location}</string>
    <string name="scan_a_valid_qr_to_authenticate">Scan a QR to Authenticate</string>
    <string name="bypass_auth">Bypass Auth.</string>
    <string name="not_in_campus">YOU ARE NOT INSIDE SJCE-MYSORE CAMPUS</string>
    <string name="_7c0505">#7C0505</string>
    <string name="user_authenticated">User Authenticated Successfully</string>
    <string name="_inside_the_sjce_mysore">You should scan the QR code within SJCE Mysore Campus to authenticate</string>
    <string name="qr_authenticated">QR AUTHENTICATED</string>
    <string name="invalid_qr">INVALID QR</string>
    <string name="_app_dev">©2024 vishnustechnologies</string>
    <string name="_enable_your_device_loc">Enable your device location provider for the better direction assistance.\nPress ENABLE to continue.</string>
    <string name="location_not_enabled">Device location not enabled</string>
    <string name="_0s_left">0s left…</string>
    <string name="todo">TODO</string>
    <string name="coords">$(coords)</string>
    <string name="spotname">$(spotName)</string>
    <string name="top_campus_location">Top Campus Location</string>
    <string name="top_campus_locations">Top Campus Locations</string>
    <string name="principal_s_office">Principal\'s Office</string>
    <string name="registration_section">Registration Section</string>
    <string name="all_departments1">View all Department</string>
    <string name="administration_block">Administrative Block</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="computer_science_engg"><![CDATA[Computer Science & Engg.]]></string>
    <string name="mca_dept">MCA Dept.</string>
    <string name="view_all_locations">View all Spots</string>
    <string name="ece_dept">ECE Dept.</string>
    <string name="view_all_departments">View all Departments</string>
    <string name="sjce_main_parking">SJCE Main Parking</string>
    <string name="campus_parkings">Campus Parkings</string>
    <string name="nearby_cafeteria">Cafeterias</string>
    <string name="vehicle_parking_2">Parking 2</string>
    <string name="mylari_canteen">Annapurna Canteen</string>
    <string name="canteen_1_n_poly_technique">Canteen 1</string>
    <string name="canteen_n2">Canteen 2</string>
    <string name="yampa">YAMPA</string>
    <string name="vehicle_parking_1">Parking 1</string>
    <string name="staff_parking_1_n_admin_block">Staff Parking 1</string>
    <string name="staff_parking_2_n_cms_block">Staff Parking 2</string>
    <string name="open_with_google_map">OPEN WITH GOOGLE MAP</string>
    <string name="start_place">Start place:</string>
    <string name="start_place_ncoordinates">Start place\ncoordinates:</string>
    <string name="end_place_ncoordinates">End place\ncoordinates:</string>
    <string name="loc_coords">$(loc_coords)</string>
    <string name="place">$(place)</string>
    <string name="end_place_coord">$(end_place_coord)</string>
    <string name="sjce_main_library">SJCE Library</string>
    <string name="end_place">End place:</string>
    <string name="image">IMAGE</string>
    <string name="google_images">Google Images</string>
    <string name="enable_your_location_provider">Enable your device location</string>
    <string name="enable_your_device_gps_location">Enable your device\'s GPS provider</string>
    <string name="is_seminar_hall">IS Seminar Hall</string>
    <string name="checking">Checking…</string>
    <string name="signing_in">Signing in…</string>
    <string name="enable_dev_loc">"Enable your device's GPS "</string>
    <string name="_360_view">360° View</string>
    <string name="back">Back</string>
    <string name="please_wait">Please wait…</string>
    <string name="authentication">AUTHENTICATION</string>
    <string name="email">Email</string>
    <string name="enter_the_email_address">Enter the email address:</string>
    <string name="enter_your_password">Enter your password:</string>
    <string name="password">Password</string>
    <string name="authenticate">Authenticate</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">LOGIN</string>
    <string name="user_login">USER LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="register_account">REGISTER ACCOUNT</string>
    <string name="enter_your_reg">Enter your registered email address and password to continue</string>
    <string name="enter_a_new">Enter new email and password to register with us. Remember password for future logins.</string>
    <string name="enter_your_regi">Enter your registered email address and associated password to login</string>
    <string name="fields_can_t_be_empty">Fields can\'t be empty</string>
    <string name="please_enter_the_email_id">Please enter the email-id!</string>
    <string name="please_enter_the_password">Please enter the password!</string>
    <string name="password_not_match">Password doesn\'t match!</string>
    <string name="re_enter_password">Re-enter the password!</string>
    <string name="error_fetching">Error fetching sign-in methods</string>
    <string name="email_is_already_registered">Email is already registered</string>
    <string name="authentication_fail">Authentication failed, Email address may already registered!</string>
    <string name="registration_successful">Registration successful</string>
    <string name="length_should_be_6_or_more">Length should be 6 or more!</string>
    <string name="email_address_had_already_taken">Email address has already taken!</string>
    <string name="please_verify_your_email_id">Please verify your email id</string>
    <string name="reset">Reset</string>
    <string name="email_verification_link_sent">Email verification link sent</string>
    <string name="set_a_new_password">Set a new password:</string>
    <string name="re_enter_the_password">Re-enter the password:</string>
    <string name="enter_your_email_address">Enter your email address:</string>
    <string name="menu_options">Options</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="delete_acc">Delete Account</string>
    <string name="email_verified">(verified)</string>
    <string name="email_not_verified">(verified)</string>
    <string name="verify_login_with_registered_account"><![CDATA[Verify & login with registered account]]></string>
    <string name="please_wait_while_we_checking">Please wait, while we checking…</string>
    <string name="please_login">Redirecting to login…</string>
    <string name="sjce_map">SJCE-MAP</string>
    <string name="please_enable_yr_gps">Please enable your GPS</string>
    <string name="LOGIN">LOGIN</string>
    <string name="REGISTER">REGISTER</string>
    <string name="gps_initialization_under">Please wait while android system initialize GPS, This may take only few seconds…</string>
    <string name="device_location_not_enabled">Device location not enabled!</string>
    <string name="authentication_works_">Authentication works properly only if device location is enabled. Tap Settings>Location, and turn on location access.</string>
    <string name="init_gps_please_wait">Initializing GPS…</string>
    <string name="starting_app">Starting app…</string>
    <string name="TODO">TODO</string>
    <string name="empty" />
    <string name="get_started">Get Started</string>
    <string name="enable">Enable</string>
    <string name="get_direction">Get Direction in Map</string>
    <string name="view_in_360">View in 360°</string>
    <string name="contact_vishnustechnologies_gmail_com">Contact at: <u>vishnustechnologies@gmail.com</u></string>
    <string name="developed_by_">Developed by <u>vishnustechnologies</u></string>
    <string name="permission_required">permission required\!</string>
    <string name="Permission_required">Permission required</string>
    <string name="to_continue_tu">To continue, turn on device location</string>
    <string name="for_details_go_to">For details, go to location settings.</string>
    <string name="use_google_s_location">Use Google\'s location services\; as part of this services, Google may collect location data periodically and use this data in an anonymous way to improve location accuracy and location-based services.</string>
    <string name="your_device_will_need_to">Your device will need to:</string>
    <string name="use_gps_wi_fi_mobile_networks_and_sensors">Use GPS, Wi-Fi, mobile networks and sensors</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="enable_your_device_location">Enable your device location</string>
    <string name="loading_maps">loading maps…</string>
    <string name="progressLeft">progress left</string>
    <string name="loading">loading…</string>
    <string name="location_permission_required">location permission required</string>
    <string name="camera_permission_required">Camera permission required</string>
    <string name="location_permission_consent_1">This app uses your location data (which may include precise GPS location or approximate location) to verify that your initial QR code login originates from within SJCE MYSORE CAMPUS.\n\nTo ensure continued security, we may also use your location data in subsequent activities within the app to confirm you remain within SJCE MYSORE CAMPUS. If your location falls outside the campus, you may be prompted to rescan the QR code for verification. We will only access your location when necessary and will not store your location data beyond verification purposes.</string>
    <string name="location_permission_consent_2">Features that use location in the background include user authentication and unauthorized prevention.\n\nBy tapping \'Continue,\' you consent to the use of your location data for the purposes described above.</string>
    <string name="cam_permission_consent_1">This app uses your device\'s camera to scan QR codes for secure login. When you scan a QR code, the app will only capture the code itself and will not access or store any other images or videos.</string>
    <string name="cam_permission_consent_2">By tapping \'Continue,\' you consent to the app using your camera for QR code scanning purposes only. </string>
    <string name="checking_permission">Checking permission</string>
    <string name="all_permission_granted">All permission granted</string>
    <string name="waiting_for_device_loc">Waiting for device location…</string>
</resources>