<!-- res/layout/bottom_sheet_layout.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Theme.Material3.Light.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/baseline_arrow_drop_down_24" />

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/to_continue_tu"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/your_device_will_need_to"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/anonymous_pro"
        android:gravity="center_vertical"
        android:text="@string/use_gps_wi_fi_mobile_networks_and_sensors"
        android:textSize="12sp"
        app:drawableLeftCompat="@drawable/baseline_my_location_24" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:fontFamily="@font/anonymous_pro"
        android:gravity="center_vertical"
        android:text="@string/use_google_s_locatio"
        android:textSize="12sp"
        app:drawableLeftCompat="@drawable/baseline_my_location_24" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/anonymous_pro_bold"
        android:text="@string/for_details_go_to"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/go_to_settings"
        android:textStyle="bold" />
</LinearLayout>
