<!-- res/layout/bottom_sheet_layout.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Theme.Material3.Light.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/prominentDisclosureHeading_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/to_continue_tu"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/prominentDisclosureSubPoint1_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/authentication_works_"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/goToSettings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/go_to_settings"
        android:textStyle="bold" />
</LinearLayout>
