<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.RegisterFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="#0F63A5"
        android:gravity="center"
        android:padding="3dp"
        android:paddingBottom="5dp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/registration_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="45dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B2FBF7F7"
            android:padding="16dp">

            <TextView
                android:id="@+id/authBanner_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:fontFamily="@font/artifika"
                android:lineSpacingExtra="5dp"
                android:paddingHorizontal="5dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:text="@string/register_account"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/baseline_app_registration_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/anonymous_pro"
                android:text="@string/enter_a_new"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/authBanner_textView"
                app:layout_constraintStart_toStartOf="@+id/authBanner_textView"
                app:layout_constraintTop_toBottomOf="@+id/authBanner_textView" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="45dp"
                android:fontFamily="@font/anonymous_pro"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/enter_the_email_address"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <EditText
                android:id="@+id/emailFieldRegisterFragment_editTextText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:autofillHints="email"
                android:ems="10"
                android:fontFamily="courier new"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView343"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/anonymous_pro"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/re_enter_the_password"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordFieldRegisterFragment_editTextText" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/anonymous_pro"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/set_a_new_password"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailFieldRegisterFragment_editTextText" />

            <EditText
                android:id="@+id/passwordFieldRegisterFragment_editTextText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:autofillHints="password"
                android:ems="10"
                android:fontFamily="courier new"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="123456"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView34" />

            <TextView
                android:id="@+id/statusViewRegisterFragment_editTextText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/anonymous_pro"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/registerRegisterFragment_button"
                app:layout_constraintEnd_toEndOf="@+id/registerRegisterFragment_button"
                app:layout_constraintStart_toStartOf="@+id/registerRegisterFragment_button"
                app:layout_constraintTop_toBottomOf="@+id/reEnterPasswordFieldRegisterFragment_editTextText" />

            <EditText
                android:id="@+id/reEnterPasswordFieldRegisterFragment_editTextText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:fontFamily="courier new"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="123456"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView343" />

            <Button
                android:id="@+id/registerRegisterFragment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#0F63A5"
                android:fontFamily="@font/artifika"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>