<!-- item_card_view.xml -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/allDepartments_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:autofillHints="75415"
    android:backgroundTintMode="add"
    card_view:cardCornerRadius="15dp"
    card_view:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:backgroundTint="#E6E4EA"
        android:backgroundTintMode="add"
        android:hapticFeedbackEnabled="true"
        android:padding="16dp">

        <TextView
            android:id="@+id/spotNameAllDepartmentInfoView_textView"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/spotname"
            android:textAlignment="center"
            android:textColor="#3E3D3D"
            android:textSize="14sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/spotImageAllDepartmentInfoView_imageView"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.6"
            card_view:layout_constraintStart_toEndOf="@+id/spotImageAllDepartmentInfoView_imageView"
            card_view:layout_constraintTop_toTopOf="@+id/spotImageAllDepartmentInfoView_imageView" />

        <ImageView
            android:id="@+id/spotImageAllDepartmentInfoView_imageView"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginStart="5dp"
            android:adjustViewBounds="true"
            android:background="#FFFFFF"
            android:contentDescription="@string/todo"
            android:cropToPadding="true"
            android:elevation="8dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/spotCoordinatesAllDepartmentInfoView_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/anonymous_pro"
            android:text="@string/coords"
            android:textAlignment="textEnd"
            android:textSize="11sp"
            android:visibility="gone"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="@+id/spotNameAllDepartmentInfoView_textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>








