<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.about.AboutFragment"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/jss_logo" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Version 1.0"
            android:layout_marginTop="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/developer_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/developed_by_"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/contact_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autoLink="email"
            android:clickable="true"
            android:text="@string/contact_vishnustechnologies_gmail_com"
            android:textColorLink="#8E8A8A"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="Privacy Policy"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <!-- Privacy Policy Content -->
        <TextView
            android:id="@+id/privacyPolicyContent_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autoLink="web"
            android:text="https://www.termsfeed.com/live/982b44e1-075d-445f-9fd9-f28195740ea7"
            android:textColorLink="#8E8A8A"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/terms_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="Terms of Service"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>
